updated the code of the autb package